syntax = "proto3";

message GuidRequest {
  string guid = 1;
}